--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss-csso": "6.0.1",
     "postcss-url": "10.1.3",
     "sass": "1.69.5",
+    "sharp": "0.33.1",
     "stylelint": "15.11.0",
     "stylelint-config-htmlacademy": "2.0.6",
     "w3c-html-validator": "1.6.1"
